tests/rspack-test/configCases/errors/asset-options-validation/test.filter.js
module.exports = () => "TODO: support asset generator options validation"
